--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -22,7 +22,7 @@
 }
 
 .historial:nth-child(even) {
-  background: #fcebea;
+  background: #cce6fb;
 }
 .contenedor_acciones{
   text-align: center;
